# postowl

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  config.example.yaml  pyproject.toml
.trellis/: .template-hashes.json
.trellis/spec/backend/: database-guidelines.md  directory-structure.md  error-handling.md  index.md  logging-guidelines.md  quality-guidelines.md
.trellis/tasks/05-09-email-enhancement/: prd.md  task.json
.trellis/tasks/05-09-failure-escalation/: task.json
.trellis/tasks/05-09-headers-only/: prd.md  task.json
.trellis/tasks/05-09-imap-idle/: prd.md  task.json
.trellis/tasks/05-09-listener-engine/: prd.md  task.json
.trellis/tasks/05-09-memory-layers/: task.json
.trellis/tasks/05-09-parallel-process/: prd.md  task.json
.trellis/tasks/05-09-prompt-enhance/: prd.md  task.json
.trellis/tasks/05-09-self-evolving-rules/: task.json
.trellis/tasks/05-09-smart-agent/: prd.md  task.json
.trellis/tasks/05-09-two-phase-rag/: task.json
.trellis/tasks/05-09-unify-pipeline/: prd.md  task.json
.trellis/tasks/05-09-working-memory/: task.json
.trellis/workspace/zhengru/: index.md  journal-1.md
src/postowl/: __init__.py  app.py  bot.py  cli.py  config.py  models.py  pipeline.py  scheduler.py
src/postowl/agent/: __init__.py  classifier.py  rag.py  retry.py  summarizer.py
src/postowl/email/: __init__.py  client.py  parser.py
src/postowl/listener/: builtin.py  engine.py  learner.py
src/postowl/llm/: __init__.py  client.py
src/postowl/memory/: contacts.py  index.py  working.py
(+5 files in other folders)
